# anchor_study

./: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
programs/anchor_study/: Cargo.toml
programs/anchor_study/src/: hello_anchor.rs  lib.rs
programs/demo/: Cargo.toml
programs/demo/src/: lib.rs
programs/hello_anchor/: Cargo.toml
programs/hello_anchor/src/: lib.rs
tests/: anchor_study.ts  anchor_test.ts  hello_anchor_test.ts  pda_test.ts
tests/account/: create_account_test.ts  create_mint_account_by_token_2022.ts  get_sysvar_account_test.ts  token_2022_example.ts
