[workspace]
members = [
    "programs/*"
]
resolver = "2"

[package]
name = "anchor_study"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor = "0.1.3"
anchor-lang = "0.31.1"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
